[gd_scene load_steps=62 format=3 uid="uid://vgmb5l1ihc2p"]

[ext_resource type="Script" path="res://prefabs/test/battle/battle_tester.gd" id="1_7scea"]
[ext_resource type="Script" path="res://scripts/battle/combatant/move.gd" id="2_4cfte"]
[ext_resource type="Script" path="res://scripts/battle/combatant.gd" id="2_12odb"]
[ext_resource type="Script" path="res://scripts/overworld/overworld_enemy/static_encounter.gd" id="2_sffs8"]
[ext_resource type="Script" path="res://scripts/battle/win_conditions/total_defeat_win_con.gd" id="3_3k7vy"]
[ext_resource type="Script" path="res://scripts/reward/reward.gd" id="3_y7nw7"]
[ext_resource type="Resource" uid="uid://crei2j1v6q4jn" path="res://gamedata/moves/slice/slice.tres" id="4_cmvjq"]
[ext_resource type="Script" path="res://scripts/battle/combatant/stats.gd" id="7_ouq35"]
[ext_resource type="Script" path="res://scripts/battle/battle_scene/battle_command.gd" id="9_jd22b"]
[ext_resource type="Resource" uid="uid://m0gb68fd256q" path="res://gamedata/combatants/tree_bear/tree_bear_sprite.tres" id="14_8tdek"]
[ext_resource type="Resource" uid="uid://bfkpkrjtkr1yh" path="res://gamedata/combatants/solius/solius_rewards.tres" id="14_qb2p1"]
[ext_resource type="Resource" uid="uid://s0w201cc85nl" path="res://gamedata/combatants/tree_bear/tree_bear_movepool.tres" id="14_tebfq"]
[ext_resource type="Resource" uid="uid://cklm6fg7frkqq" path="res://gamedata/combatants/tree_bear/tree_bear_stat_growth.tres" id="15_ahtpg"]
[ext_resource type="Resource" uid="uid://b5qdockvs7by1" path="res://gamedata/combatants/solius/solius_evolutions.tres" id="15_i6rka"]
[ext_resource type="Resource" uid="uid://r5nfn065bsw4" path="res://gamedata/combatants/rat/rat_movepool.tres" id="15_qn3hw"]
[ext_resource type="Resource" uid="uid://c63oatk8g1jh6" path="res://gamedata/combatants/rat/rat_stat_growth.tres" id="16_1n64h"]
[ext_resource type="Resource" uid="uid://byhxd5t7pvevm" path="res://gamedata/combatants/solius/solius_effectiveness.tres" id="16_nt2je"]
[ext_resource type="Resource" uid="uid://4pup88f5tgtg" path="res://gamedata/combatants/solius/solius_sprite.tres" id="17_idd5h"]
[ext_resource type="Resource" uid="uid://bstxqhg72gire" path="res://gamedata/combatants/solius/solius_movepool.tres" id="18_duw15"]
[ext_resource type="Script" path="res://scripts/battle/battle_scene/turn_executor.gd" id="18_rw5pq"]
[ext_resource type="Resource" uid="uid://b6gpqdsyrjms1" path="res://gamedata/combatants/rat/rat_sprite.tres" id="19_8nfrw"]
[ext_resource type="Script" path="res://scripts/battle/status_effects/element_burn.gd" id="19_a5sey"]
[ext_resource type="Resource" uid="uid://cyohebl1miw2g" path="res://gamedata/combatants/solius/solius_stat_growth.tres" id="19_fdfdx"]
[ext_resource type="Script" path="res://prefabs/test/battle/mock_battle_ui.gd" id="19_kmf14"]
[ext_resource type="Resource" uid="uid://b44rt6x6fxqsj" path="res://gamedata/combatants/solius/solius_equipment.tres" id="20_fk61q"]
[ext_resource type="PackedScene" uid="uid://dmc2ox37dega8" path="res://prefabs/audio/audio_handler.tscn" id="21_y6pws"]
[ext_resource type="Script" path="res://scripts/battle/status_effects/mania.gd" id="23_1anbk"]
[ext_resource type="Resource" uid="uid://dm3g1qy72w0lg" path="res://gamedata/combatants/lithosaurus/lithosaurus.tres" id="24_d680s"]
[ext_resource type="Script" path="res://scripts/battle/status_effects/bleed.gd" id="27_6lffl"]
[ext_resource type="Resource" uid="uid://8hrdloy8r6ya" path="res://gamedata/moves/battle_chant/battle_chant.tres" id="28_3l5fj"]
[ext_resource type="Resource" uid="uid://bcx60u36qshvn" path="res://gamedata/combatants/player/player.tres" id="28_yubvn"]
[ext_resource type="Resource" uid="uid://dtco7uib2bx3l" path="res://gamedata/moves/impale/impale.tres" id="33_ifyb1"]
[ext_resource type="Script" path="res://scripts/battle/status_effects/interception.gd" id="33_jwbae"]
[ext_resource type="PackedScene" uid="uid://chpi5qfgk1cqj" path="res://prefabs/ui/sfx_button.tscn" id="33_snsqx"]
[ext_resource type="Resource" uid="uid://cpmh4qw3gwv3b" path="res://gamedata/items/healing/leavenport_loaf.tres" id="43_1s0me"]
[ext_resource type="Resource" uid="uid://eq5onf8hmiau" path="res://gamedata/moves/venom_strike/venom_strike.tres" id="43_7r665"]
[ext_resource type="PackedScene" uid="uid://bk5magi8dnwgj" path="res://prefabs/battle/battle_animation_manager.tscn" id="43_cxami"]
[ext_resource type="Script" path="res://scripts/inventory/inventory_slot.gd" id="44_j7j6h"]
[ext_resource type="Resource" uid="uid://bi44lny7wl8lx" path="res://gamedata/moves/shield_wall/shield_wall.tres" id="46_m7oae"]

[sub_resource type="Resource" id="Resource_i3ge1"]
script = ExtResource("9_jd22b")
type = 1
move = ExtResource("4_cmvjq")
moveEffectType = 1
orbChange = 1
targetPositions = Array[String](["Center"])
randomNums = Array[float]([])
selfRandomNum = -1.0

[sub_resource type="Resource" id="Resource_q07ea"]
script = ExtResource("7_ouq35")
displayName = "Solius"
saveName = "solius"
level = 1
experience = 0
maxHp = 50
physAttack = 1
magicAttack = 1
resistance = 1
affinity = 1
speed = 1
statPts = 0
statGrowth = ExtResource("19_fdfdx")
moves = Array[ExtResource("2_4cfte")]([])
movepool = ExtResource("18_duw15")

[sub_resource type="Resource" id="Resource_lcaln"]
script = ExtResource("23_1anbk")
type = 7
potency = 1
overwritesOtherStatuses = false
turnsLeft = 2

[sub_resource type="Resource" id="Resource_4p0wd"]
script = ExtResource("2_12odb")
sprite = ExtResource("17_idd5h")
nickname = ""
stats = SubResource("Resource_q07ea")
evolutions = ExtResource("15_i6rka")
evolutionStats = {}
minionStatAllocMode = -1
currentHp = -1
orbs = 0
statusEffect = SubResource("Resource_lcaln")
friendship = 0.0
maxFriendship = 30.0
version = ""
aiType = 1
damageAggroType = 3
strategy = 1
aiOverrideWeight = 0.0
moveEffectiveness = ExtResource("16_nt2je")
weightedEquipment = ExtResource("20_fk61q")
dropTable = ExtResource("14_qb2p1")
command = SubResource("Resource_i3ge1")
downed = false

[sub_resource type="Resource" id="Resource_h71dw"]
script = ExtResource("9_jd22b")
type = 1
move = ExtResource("4_cmvjq")
moveEffectType = 1
orbChange = 0
targetPositions = Array[String](["You"])
randomNums = Array[float]([0.5])
selfRandomNum = -1.0

[sub_resource type="Resource" id="Resource_hula1"]
script = ExtResource("7_ouq35")
displayName = "Rat"
saveName = "rat"
level = 1
experience = 0
maxHp = 50
physAttack = 1
magicAttack = 1
resistance = 1
affinity = 1
speed = 1
statPts = 0
statGrowth = ExtResource("16_1n64h")
moves = Array[ExtResource("2_4cfte")]([])
movepool = ExtResource("15_qn3hw")

[sub_resource type="Resource" id="Resource_g8u4s"]
script = ExtResource("19_a5sey")
element = 2
power = 45.0
attackerStat = 15.0
attackerLv = 10
type = 11
potency = 1
overwritesOtherStatuses = false
turnsLeft = 2

[sub_resource type="Resource" id="Resource_dvq57"]
script = ExtResource("2_12odb")
sprite = ExtResource("19_8nfrw")
nickname = ""
stats = SubResource("Resource_hula1")
evolutionStats = {}
minionStatAllocMode = -1
currentHp = -1
orbs = 0
statusEffect = SubResource("Resource_g8u4s")
friendship = 0.0
maxFriendship = 30.0
version = ""
aiType = 1
damageAggroType = 0
strategy = 0
aiOverrideWeight = 0.35
command = SubResource("Resource_h71dw")
downed = false

[sub_resource type="Resource" id="Resource_lly4o"]
script = ExtResource("9_jd22b")
type = 1
move = ExtResource("28_3l5fj")
moveEffectType = 2
orbChange = -2
targetPositions = Array[String](["Top"])
randomNums = Array[float]([0.5])
selfRandomNum = -1.0

[sub_resource type="Resource" id="Resource_8heid"]
script = ExtResource("7_ouq35")
displayName = "Tree-Bear"
saveName = "tree_bear"
level = 1
experience = 0
maxHp = 50
physAttack = 1
magicAttack = 1
resistance = 1
affinity = 1
speed = 1
statPts = 0
statGrowth = ExtResource("15_ahtpg")
moves = Array[ExtResource("2_4cfte")]([])
movepool = ExtResource("14_tebfq")

[sub_resource type="Resource" id="Resource_g23lp"]
script = ExtResource("27_6lffl")
type = 2
potency = 1
overwritesOtherStatuses = false
turnsLeft = 3

[sub_resource type="Resource" id="Resource_r1f0o"]
script = ExtResource("2_12odb")
sprite = ExtResource("14_8tdek")
nickname = ""
stats = SubResource("Resource_8heid")
evolutionStats = {}
minionStatAllocMode = -1
currentHp = -1
orbs = 0
statusEffect = SubResource("Resource_g23lp")
friendship = 0.0
maxFriendship = 30.0
version = ""
aiType = 3
damageAggroType = 0
strategy = 2
aiOverrideWeight = 0.4
command = SubResource("Resource_lly4o")
downed = false

[sub_resource type="Resource" id="Resource_8wt0b"]
script = ExtResource("3_3k7vy")
winText = "You won the battle!"
loseText = "You were defeated..."
escapeText = "You escaped successfully!"

[sub_resource type="Resource" id="Resource_gsvj1"]
script = ExtResource("2_sffs8")
combatant1Level = 9
combatant1Moves = Array[ExtResource("2_4cfte")]([])
combatant2 = SubResource("Resource_r1f0o")
combatant2Level = 10
combatant2Moves = Array[ExtResource("2_4cfte")]([])
combatant3 = ExtResource("24_d680s")
combatant3Level = 9
combatant3Moves = Array[ExtResource("2_4cfte")]([])
autoAlly = SubResource("Resource_4p0wd")
autoAllyLevel = 10
autoAllyMoves = Array[ExtResource("2_4cfte")]([])
specialBattleId = ""
bossBattle = false
canEscape = true
rewards = Array[ExtResource("3_y7nw7")]([])
useStaticRewards = false
combatant1 = SubResource("Resource_dvq57")
specialRules = 0
winCon = SubResource("Resource_8wt0b")
customWinText = ""

[sub_resource type="Resource" id="Resource_snunq"]
script = ExtResource("9_jd22b")
type = 1
move = ExtResource("43_7r665")
moveEffectType = 1
orbChange = 1
targetPositions = Array[String](["Bottom"])
randomNums = Array[float]([1.0])
selfRandomNum = -1.0

[sub_resource type="Resource" id="Resource_cbcj4"]
script = ExtResource("44_j7j6h")
item = ExtResource("43_1s0me")
count = 1

[sub_resource type="Resource" id="Resource_el0wh"]
script = ExtResource("9_jd22b")
type = 2
moveEffectType = 0
orbChange = 0
slot = SubResource("Resource_cbcj4")
targetPositions = Array[String](["You"])
randomNums = Array[float]([0.5])
selfRandomNum = -1.0

[sub_resource type="Resource" id="Resource_5owuj"]
script = ExtResource("33_jwbae")
type = 9
potency = 1
overwritesOtherStatuses = false
turnsLeft = 2

[sub_resource type="Resource" id="Resource_mx2w5"]
script = ExtResource("9_jd22b")
type = 1
move = ExtResource("33_ifyb1")
moveEffectType = 1
orbChange = 1
targetPositions = Array[String](["You"])
randomNums = Array[float]([0.0])
selfRandomNum = -1.0

[sub_resource type="Resource" id="Resource_2nv1k"]
script = ExtResource("9_jd22b")
type = 1
move = ExtResource("46_m7oae")
moveEffectType = 1
orbChange = 1
targetPositions = Array[String](["Top"])
randomNums = Array[float]([0.5])
selfRandomNum = -1.0

[sub_resource type="Resource" id="Resource_y8e5y"]
script = ExtResource("33_jwbae")
type = 9
potency = 1
overwritesOtherStatuses = false
turnsLeft = 2

[sub_resource type="Resource" id="Resource_hmp4c"]
script = ExtResource("9_jd22b")
type = 0
moveEffectType = 0
orbChange = 0
targetPositions = Array[String]([])
randomNums = Array[float]([])
selfRandomNum = -1.0

[node name="BattleTester" type="Node2D" node_paths=PackedStringArray("globalMarker")]
script = ExtResource("1_7scea")
encounter = SubResource("Resource_gsvj1")
_playerCombatant = ExtResource("28_yubvn")
playerLv = 10
playerCommand = SubResource("Resource_snunq")
currentPlayerHp = 50
minionCommand = SubResource("Resource_el0wh")
minionStatus = SubResource("Resource_5owuj")
enemy1Command = SubResource("Resource_mx2w5")
enemy2Command = SubResource("Resource_2nv1k")
enemy2Status = SubResource("Resource_y8e5y")
enemy3Command = SubResource("Resource_hmp4c")
globalMarker = NodePath("BattleAnimationManager/GlobalMarker")

[node name="BattleAnimationManager" parent="." instance=ExtResource("43_cxami")]

[node name="EnemyCombatant1" parent="BattleAnimationManager" index="5"]
role = 1

[node name="EnemyCombatant2" parent="BattleAnimationManager" index="6"]
role = 1

[node name="EnemyCombatant3" parent="BattleAnimationManager" index="7"]
role = 1

[node name="BattlefieldShade" parent="BattleAnimationManager" index="8"]
offset_top = -90.0
offset_bottom = 43.0

[node name="TurnExecutor" type="Node" parent="." node_paths=PackedStringArray("battleController", "battleUI")]
script = ExtResource("18_rw5pq")
battleController = NodePath("..")
battleUI = NodePath("../MockBattleUI")

[node name="MockBattleUI" type="Camera2D" parent="." node_paths=PackedStringArray("battleController")]
zoom = Vector2(4, 4)
script = ExtResource("19_kmf14")
menuState = 6
battleController = NodePath("..")

[node name="AudioHandler" parent="." instance=ExtResource("21_y6pws")]

[node name="SfxButton" parent="." instance=ExtResource("33_snsqx")]
offset_left = -25.0
offset_top = 49.0
offset_right = 30.0
offset_bottom = 80.0
text = "Next"

[connection signal="combatant_animation_complete" from="BattleAnimationManager" to="." method="_on_battle_animation_manager_combatant_animation_complete"]
[connection signal="combatant_animation_start" from="BattleAnimationManager" to="." method="_on_battle_animation_manager_combatant_animation_start"]

[editable path="BattleAnimationManager"]
[editable path="BattleAnimationManager/PlayerCombatant"]
[editable path="BattleAnimationManager/PlayerCombatant/SpriteContainer/FrontParticleContainer/HitParticleEmitter"]
[editable path="BattleAnimationManager/PlayerCombatant/HPTag/OrbDisplay"]
[editable path="BattleAnimationManager/MinionCombatant"]
[editable path="BattleAnimationManager/MinionCombatant/SpriteContainer/FrontParticleContainer/HitParticleEmitter"]
[editable path="BattleAnimationManager/MinionCombatant/HPTag/OrbDisplay"]
[editable path="BattleAnimationManager/EnemyCombatant1"]
[editable path="BattleAnimationManager/EnemyCombatant1/SpriteContainer/FrontParticleContainer/HitParticleEmitter"]
[editable path="BattleAnimationManager/EnemyCombatant1/HPTag/OrbDisplay"]
[editable path="BattleAnimationManager/EnemyCombatant2"]
[editable path="BattleAnimationManager/EnemyCombatant2/SpriteContainer/FrontParticleContainer/HitParticleEmitter"]
[editable path="BattleAnimationManager/EnemyCombatant2/HPTag/OrbDisplay"]
[editable path="BattleAnimationManager/EnemyCombatant3"]
[editable path="BattleAnimationManager/EnemyCombatant3/SpriteContainer/FrontParticleContainer/HitParticleEmitter"]
[editable path="BattleAnimationManager/EnemyCombatant3/HPTag/OrbDisplay"]
